--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="block block15"></div>
         <div class="block block16"></div>
         <div class="block block17"></div>
-        <div class="block block18"></div>
+        <div class="block block18">Кнопка</div>
     </div>
 </body>
 </html>
