--- a/index.html
+++ b/index.html
@@ -1,34 +1,79 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pretty Cats</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Good Sunday!</h1>
-    <!-- .box>.block.block$*18 -->
-    <div class="box">
-        <div class="block block1"></div>
-        <div class="block block2"></div>
-        <div class="block block3"></div>
-        <div class="block block4"></div>
-        <div class="block block5"></div>
-        <div class="block block6"></div>
-        <div class="block block7"></div>
-        <div class="block block8"></div>
-        <div class="block block9"></div>
-        <div class="block block10"></div>
-        <div class="block block11"></div>
-        <div class="block block12"></div>
-        <div class="block block13"></div>
-        <div class="block block14"></div>
-        <div class="block block15"></div>
-        <div class="block block16"></div>
-        <div class="block block17"></div>
-        <div class="block block18">Кнопка</div>
+    <div class="wrapper">
+        <header>
+            <a href="" class="logo">Pretty Cats</a>
+            <nav>
+                <a href="" id="user">Update User</a>
+                <a href="" class="btn" id="add">Add</a>
+            </nav>
+        </header>
+        <main></main>
+        <footer>©2022 Frontend 8 - Pretty Cats</footer>
     </div>
+    <div class="popup-wrapper">
+        <!-- <div class="popup">
+            <div class="popup__close"></div>
+            <div class="popup__content"></div>
+        </div> -->
+        <div class="popup popup-add">
+            <div class="popup__close"></div>
+            <div class="popup__content">
+                <form id="addForm">
+                    <h2>Добавить котика</h2>
+                    <input type="text" name="name" placeholder="Имя котика" required>
+                    <input type="number" name="id" placeholder="id" required>
+                    <input type="text" name="img_link" placeholder="Ссылка на картинку">
+                    <input type="number" name="age" placeholder="Возраст" min="0">
+                    <input type="number" name="rate" placeholder="Рейтинг" min="0" max="10"> 
+                    <label for="fav">
+                        <input type="checkbox" name="favourite">
+                        Любимчик
+                    </label>
+                    <textarea name="description" placeholder="Описание"></textarea>
+                    <button type="submit">Добавить</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup popup-upd">
+            <div class="popup__close"></div>
+            <div class="popup__content">
+                <form id="updForm">
+                    <h2>Изменить котика</h2>
+                    <input type="text" name="name" placeholder="Имя котика" required>
+                    <input type="number" name="id" placeholder="id" disabled>
+                    <input type="text" name="img_link" placeholder="Ссылка на картинку">
+                    <input type="number" name="age" placeholder="Возраст" min="0">
+                    <input type="number" name="rate" placeholder="Рейтинг" min="0" max="10"> 
+                    <label for="fav">
+                        <input type="checkbox" name="favourite">
+                        Любимчик
+                    </label>
+                    <textarea name="description" placeholder="Описание"></textarea>
+                    <button type="submit">Добавить</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- <script src="script.js"></script> -->
+    <script src="storageScript.js"></script>
 </body>
 </html>
+
+<!-- 
+    localStorage.getItem("obj")
+    => '[object Object]'
+    localStorage.setItem("obj", JSON.stringify({n: "6"}))
+    localStorage.getItem("obj")
+    => '{"n":"6"}'
+    JSON.parse(localStorage.getItem("obj"));
+    => {n: '6'}
+-->
